--- a/CSS/Css.css
+++ b/CSS/Css.css
@@ -57,7 +57,7 @@ nav ul li a {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #444;
+    background-color: white;
     padding: 10px;
     top: 100%;
     left: 0;
@@ -65,6 +65,9 @@ nav ul li a {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+.dropdown:hover{
+    background-color: rosybrown;
 }
 
 .cart-display {
